sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:5: error: type mismatch;
 found   : Unit
 required: Boolean
  while (b=0) {
          ^AlgCocktailSort1:8: error: not found: value PlusPetit
    if (!PlusPetit(i,i+1)) {
         ^AlgCocktailSort1:14: error: not found: value PlusPetit
    if (PlusPetit(j,j+1)) {
        ^